--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,10 @@ jobs:
             - name: Commit & Push changes
               env:
                   GITHUB_TOKEN: ${{ github.token }}
+                  DATE: $(date '+%Y-%m-%d %H:%M:%S')
               uses: stefanzweifel/git-auto-commit-action@v4.16.0
               with:
-                    commit_message: Auto extract by Github Actions at $(date '+%Y-%m-%d %H:%M:%S')
+                    commit_message: Auto extract by Github Actions at ${{ env.DATE }}
                     create_branch: true
                     branch: main
                     commit_options: '--allow-empty'
