--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
                   GITHUB_TOKEN: ${{ github.token }}
               uses: stefanzweifel/git-auto-commit-action@v4.16.0
               with:
-                    commit_message: Auto extract by Github Actions at ${{ env.DATE }}
+                    commit_message: Auto extract by Github Actions at UTC ${{ env.DATE }}
                     create_branch: true
                     branch: main
                     commit_options: '--allow-empty'
