--- a/outputs/clash_meta_warp.yaml
+++ b/outputs/clash_meta_warp.yaml
@@ -104,6 +104,21 @@ proxies:
     path: /gzogws
     headers:
       host: xray1.freeh1.xyz
+- name: 🇨🇦 CA-vmess | 5-1
+  type: vmess
+  server: dongtaiwang3.com
+  port: 443
+  cipher: auto
+  uuid: f5c180eb-fbce-49ac-9029-482eca9385c0
+  alterId: 0
+  tls: true
+  skip-cert-verify: true
+  servername: ''
+  network: ws
+  ws-opts:
+    path: /gzogws
+    headers:
+      host: xray1.freeh1.xyz
 - name: 🇨🇳 TW-hysteria | 6-1
   type: hysteria
   server: www2.dtku48.xyz
@@ -236,6 +251,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -258,6 +274,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -280,6 +297,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -302,6 +320,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -324,6 +343,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -346,6 +366,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -368,6 +389,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -390,6 +412,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -412,6 +435,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -434,6 +458,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -456,6 +481,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -478,6 +504,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -500,6 +527,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -522,6 +550,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -553,6 +582,7 @@ proxy-groups:
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🇺🇸 US-vmess | 4-1
+  - 🇨🇦 CA-vmess | 5-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
