--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - main
     schedule:
-        - cron: "0 */6 * * *"
+        - cron: "0 0,6,12,18 * * *"
     workflow_dispatch:
 jobs:
     Extract:
