--- a/outputs/clash_meta.yaml
+++ b/outputs/clash_meta.yaml
@@ -212,6 +212,14 @@ proxies:
   fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
+- name: 🇺🇸 US-Hysteria2 | 2-0
+  type: hysteria2
+  server: 64.110.25.11
+  port: 33337
+  password: dongtaiwang.com
+  fast-open: true
+  sni: www.bing.com
+  skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 3-0
   type: hysteria2
   server: 108.181.24.77
@@ -242,6 +250,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: ♻️ 自动选择
   type: url-test
@@ -265,6 +274,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📺 巴哈姆特
   type: select
@@ -287,6 +297,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📺 哔哩哔哩
   type: select
@@ -309,6 +320,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🌏 国内媒体
   type: select
@@ -331,6 +343,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🌍 国外媒体
   type: select
@@ -353,6 +366,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📲 电报信息
   type: select
@@ -375,6 +389,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: Ⓜ️ 微软云盘
   type: select
@@ -397,6 +412,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: Ⓜ️ 微软服务
   type: select
@@ -419,6 +435,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🍎 苹果服务
   type: select
@@ -441,6 +458,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📢 谷歌FCM
   type: select
@@ -463,6 +481,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🤖 OpenAI
   type: select
@@ -485,6 +504,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🎯 全球直连
   type: select
@@ -516,6 +536,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
