--- a/outputs/clash_meta_warp.yaml
+++ b/outputs/clash_meta_warp.yaml
@@ -231,6 +231,14 @@ proxies:
   fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
+- name: 🇺🇸 US-Hysteria2 | 2-0
+  type: hysteria2
+  server: 64.110.25.11
+  port: 33337
+  password: dongtaiwang.com
+  fast-open: true
+  sni: www.bing.com
+  skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 3-0
   type: hysteria2
   server: 108.181.24.77
@@ -262,6 +270,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: ♻️ 自动选择
   type: url-test
@@ -285,6 +294,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: ⚖ 负载均衡
   type: load-balance
@@ -308,6 +318,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: ☁ WARP前置节点
   type: select
@@ -331,6 +342,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📺 巴哈姆特
   type: select
@@ -354,6 +366,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📺 哔哩哔哩
   type: select
@@ -377,6 +390,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🌏 国内媒体
   type: select
@@ -400,6 +414,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🌍 国外媒体
   type: select
@@ -423,6 +438,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📲 电报信息
   type: select
@@ -446,6 +462,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: Ⓜ️ 微软云盘
   type: select
@@ -469,6 +486,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: Ⓜ️ 微软服务
   type: select
@@ -492,6 +510,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🍎 苹果服务
   type: select
@@ -515,6 +534,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 📢 谷歌FCM
   type: select
@@ -538,6 +558,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🤖 OpenAI
   type: select
@@ -561,6 +582,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 - name: 🎯 全球直连
   type: select
@@ -593,6 +615,7 @@ proxy-groups:
   - 🇺🇸 US-Hysteria | 3-0
   - 🇫🇷 FR-Hysteria2 | 0-0
   - 🇺🇸 US-Hysteria2 | 1-0
+  - 🇺🇸 US-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
