--- a/outputs/clash_meta_warp.yaml
+++ b/outputs/clash_meta_warp.yaml
@@ -43,9 +43,9 @@ proxies:
     headers:
       host: dongtaiwang.dtku47.xyz
   client-fingerprint: chrome
-- name: 🇫🇷 FR-vless | 0-2
+- name: 🇺🇸 US-vless | 0-2
   type: vless
-  server: fr.freeh1.xyz
+  server: cu.dongtaiwang3.com
   port: 443
   uuid: 7b671cd2-233d-406c-88da-1c687727dc52
   tls: true
@@ -164,7 +164,7 @@ proxies:
   server: 51.158.54.46
   port: 55396
   ports: 55396
-  auth_str: dongtaiwang.com
+  auth-str: dongtaiwang.com
   up: 80
   down: 100
   fast-open: true
@@ -178,7 +178,7 @@ proxies:
   server: 173.234.25.52
   port: 30072
   ports: 30072
-  auth_str: dongtaiwang.com
+  auth-str: dongtaiwang.com
   up: 80
   down: 100
   fast-open: true
@@ -192,7 +192,7 @@ proxies:
   server: 108.181.22.239
   port: 39967
   ports: 39967
-  auth_str: dongtaiwang.com
+  auth-str: dongtaiwang.com
   up: 80
   down: 100
   fast-open: true
@@ -206,7 +206,7 @@ proxies:
   server: 167.160.91.115
   port: 41189
   ports: 41189
-  auth_str: bWAwIqINo7XDm1fUlXQGBifVIXoYs1ylgVKqWFKzK1XyDKuwNF
+  auth-str: bWAwIqINo7XDm1fUlXQGBifVIXoYs1ylgVKqWFKzK1XyDKuwNF
   up: 80
   down: 100
   fast-open: true
@@ -255,7 +255,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -279,7 +279,7 @@ proxy-groups:
   tolerance: 50
   proxies:
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -303,7 +303,7 @@ proxy-groups:
   strategy: consistent-hashing
   proxies:
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -327,7 +327,7 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -351,7 +351,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -375,7 +375,7 @@ proxy-groups:
   - 🚀 节点选择
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -399,7 +399,7 @@ proxy-groups:
   - 🚀 节点选择
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -423,7 +423,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -447,7 +447,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -471,7 +471,7 @@ proxy-groups:
   - 🚀 节点选择
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -495,7 +495,7 @@ proxy-groups:
   - 🚀 节点选择
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -519,7 +519,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -543,7 +543,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -567,7 +567,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
@@ -600,7 +600,7 @@ proxy-groups:
   - 🎯 全球直连
   - ☁ WARP
   - 🇨🇦 CA-vless | 0-1
-  - 🇫🇷 FR-vless | 0-2
+  - 🇺🇸 US-vless | 0-2
   - 🇺🇸 US-ss | 1-1
   - 🇺🇸 US-vless | 2-1
   - 🏳 Unknown-vmess | 4-1
