--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,11 @@ jobs:
             - name: Run extract script
               run: python main.py
 
-            - name: Set Date env
-              run: echo "DATE=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+            - name: Write time into README file
+              run: |
+                echo "DATE=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+                sed -Ei "s|最近提取于：\`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|最近提取于：\`UTC ${{ env.DATE }}\`|g" README.md
+                sed -Ei "s|recently extracted at: \`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|recently extracted at: \`UTC ${{ env.DATE }}\`|g" README.md
               
             - name: Commit & Push changes
               env:
