--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
             - name: Write time into README file
               run: |
                 echo "DATE=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
-                sed -Ei "s|最近提取于：\`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|最近提取于：\`UTC ${{ env.DATE }}\`|g" README.md
-                sed -Ei "s|recently extracted at: \`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|recently extracted at: \`UTC ${{ env.DATE }}\`|g" README.md
+                sed -Ei "s|最近提取于：\`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|最近提取于：\`UTC $(date '+%Y-%m-%d %H:%M:%S')\`|g" README.md
+                sed -Ei "s|recently extracted at: \`UTC [0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}\`|recently extracted at: \`UTC $(date '+%Y-%m-%d %H:%M:%S')\`|g" README.md
               
             - name: Commit & Push changes
               env:
