--- a/outputs/clash_meta.yaml
+++ b/outputs/clash_meta.yaml
@@ -11,53 +11,49 @@ profile:
   tracing: true
 global-client-fingerprint: chrome
 proxies:
-- name: 🇺🇸 US-ss | 0-1
-  type: ss
-  server: uydyfkghjrtcsdx.youcansee.cyou
-  port: 20167
-  password: 81416f3c-5b00-4056-8e5f-d7ffdd884bf4
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇳 CN-ss | 0-2
-  type: ss
-  server: service.ouluyun9803.com
-  port: 26601
-  password: f665c5d0-77c0-4196-bc8d-f0450e9c665b
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇳 CN-ss | 0-3
-  type: ss
-  server: service.ouluyun9803.com
-  port: 26668
-  password: f665c5d0-77c0-4196-bc8d-f0450e9c665b
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇦 CA-vmess | 0-4
-  type: vmess
-  server: 149.56.7.123
-  port: 27490
-  cipher: auto
-  uuid: 3722f77b-21b0-4892-b9f7-79c33b76e733
-  alterId: 0
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
-    headers:
-      host: jkgd.sbs
-- name: 🇨🇿 CZ-vmess | 0-5
-  type: vmess
-  server: 94.131.97.123
-  port: 80
-  cipher: auto
-  uuid: ef7cfdf6-63e1-4307-bb61-40eb81acb5bd
-  alterId: 0
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /vmess
-    headers:
-      host: cz1-vmess.sshmax.xyz
-- name: 🇺🇸 US-vmess | 1-1
+- name: 🇫🇷 FR-vless | 0-1
+  type: vless
+  server: 51.159.103.141
+  port: 12207
+  udp: true
+  uuid: 63925418-7ae3-4da1-9e73-fb3fc5af6fdb
+  tls: true
+  servername: s0.awsstatic.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: A-DHKUq8W8KZKM1gr8xcKCoqKSct73NtdSjUZMhFcEM
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vless | 0-2
+  type: vless
+  server: 109.104.152.4
+  port: 16414
+  udp: true
+  uuid: 80b5b4de-0619-4ac2-b1ff-f2bcc697b641
+  tls: true
+  servername: mensura.cdn-apple.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: QR_5pj5Kj8I3sO6-6ywnM7B1fE2-btdv-IFEas2JHgE
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vless | 0-3
+  type: vless
+  server: 108.181.5.130
+  port: 17346
+  udp: true
+  uuid: 7fc88217-1b18-49b7-bc50-bfe379dc6bf7
+  tls: true
+  servername: d1.awsstatic.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: O5x9mSGdETFh_ql4m_2dPEUNBVwCly9XSi9pu1teLls
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vmess | 2-1
   type: vmess
   server: 108.181.2.154
   port: 33445
@@ -66,6 +62,17 @@ proxies:
   alterId: 0
   tls: false
   skip-cert-verify: true
+  network: tcp
+- name: 🇺🇸 US-vmess | 3-1
+  type: vmess
+  server: 108.181.5.18
+  port: 18657
+  cipher: auto
+  uuid: 636ba072-493e-4235-b7a8-822bd4e340d5
+  alterId: 0
+  tls: false
+  skip-cert-verify: true
+  servername: ''
   network: tcp
 - name: 🇨🇳 TW-hysteria | 6-1
   type: hysteria
@@ -168,7 +175,6 @@ proxies:
   server: 62.210.101.0
   port: 52465
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 1-0
@@ -176,7 +182,6 @@ proxies:
   server: 64.110.25.11
   port: 33337
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇫🇷 FR-Hysteria2 | 2-0
@@ -184,7 +189,6 @@ proxies:
   server: 62.210.103.0
   port: 52465
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 3-0
@@ -192,21 +196,57 @@ proxies:
   server: 108.181.24.77
   port: 43656
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
+- name: 🇺🇸 US-vmess | 0-0
+  type: vmess
+  server: 108.181.22.213
+  port: 11223
+  uuid: 28fcdcde-905c-482c-ab31-36a0f5abe931
+  alterId: 0
+  cipher: auto
+  tls: false
+  servername: ''
+  skip-cert-verify: false
+  network: tcp
+  ws-opts:
+    path: ''
+    headers: {}
+  grpc-opts:
+    serviceName: /
+  h2-opts:
+    path: /
+    host: []
+- name: 🇫🇷 FR-vmess | 2-0
+  type: vmess
+  server: 62.210.100.235
+  port: 20138
+  uuid: 3de3fd56-cc9f-42bc-a7e3-608c8990c75f
+  alterId: 0
+  cipher: auto
+  tls: false
+  servername: ''
+  skip-cert-verify: false
+  network: tcp
+  ws-opts:
+    path: ''
+    headers: {}
+  grpc-opts:
+    serviceName: /
+  h2-opts:
+    path: /
+    host: []
 proxy-groups:
 - name: 🚀 节点选择
   type: select
   proxies:
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -219,18 +259,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: ♻️ 自动选择
   type: url-test
   url: http://www.gstatic.com/generate_204
   interval: 300
   tolerance: 50
   proxies:
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -243,17 +284,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📺 巴哈姆特
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -266,17 +308,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📺 哔哩哔哩
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -289,17 +332,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🌏 国内媒体
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -312,17 +356,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🌍 国外媒体
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -335,17 +380,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📲 电报信息
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -358,17 +404,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: Ⓜ️ 微软云盘
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -381,17 +428,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: Ⓜ️ 微软服务
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -404,17 +452,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🍎 苹果服务
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -427,17 +476,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📢 谷歌FCM
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -450,17 +500,18 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🤖 OpenAI
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -473,6 +524,8 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🎯 全球直连
   type: select
   proxies:
@@ -487,12 +540,11 @@ proxy-groups:
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -505,6 +557,8 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
 - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
