--- a/outputs/clash_meta_warp.yaml
+++ b/outputs/clash_meta_warp.yaml
@@ -30,53 +30,49 @@ proxies:
   - 1.1.1.1
   - 8.8.8.8
   dialer-proxy: ☁ WARP前置节点
-- name: 🇺🇸 US-ss | 0-1
-  type: ss
-  server: uydyfkghjrtcsdx.youcansee.cyou
-  port: 20167
-  password: 81416f3c-5b00-4056-8e5f-d7ffdd884bf4
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇳 CN-ss | 0-2
-  type: ss
-  server: service.ouluyun9803.com
-  port: 26601
-  password: f665c5d0-77c0-4196-bc8d-f0450e9c665b
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇳 CN-ss | 0-3
-  type: ss
-  server: service.ouluyun9803.com
-  port: 26668
-  password: f665c5d0-77c0-4196-bc8d-f0450e9c665b
-  cipher: chacha20-ietf-poly1305
-- name: 🇨🇦 CA-vmess | 0-4
-  type: vmess
-  server: 149.56.7.123
-  port: 27490
-  cipher: auto
-  uuid: 3722f77b-21b0-4892-b9f7-79c33b76e733
-  alterId: 0
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
-    headers:
-      host: jkgd.sbs
-- name: 🇨🇿 CZ-vmess | 0-5
-  type: vmess
-  server: 94.131.97.123
-  port: 80
-  cipher: auto
-  uuid: ef7cfdf6-63e1-4307-bb61-40eb81acb5bd
-  alterId: 0
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /vmess
-    headers:
-      host: cz1-vmess.sshmax.xyz
-- name: 🇺🇸 US-vmess | 1-1
+- name: 🇫🇷 FR-vless | 0-1
+  type: vless
+  server: 51.159.103.141
+  port: 12207
+  udp: true
+  uuid: 63925418-7ae3-4da1-9e73-fb3fc5af6fdb
+  tls: true
+  servername: s0.awsstatic.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: A-DHKUq8W8KZKM1gr8xcKCoqKSct73NtdSjUZMhFcEM
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vless | 0-2
+  type: vless
+  server: 109.104.152.4
+  port: 16414
+  udp: true
+  uuid: 80b5b4de-0619-4ac2-b1ff-f2bcc697b641
+  tls: true
+  servername: mensura.cdn-apple.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: QR_5pj5Kj8I3sO6-6ywnM7B1fE2-btdv-IFEas2JHgE
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vless | 0-3
+  type: vless
+  server: 108.181.5.130
+  port: 17346
+  udp: true
+  uuid: 7fc88217-1b18-49b7-bc50-bfe379dc6bf7
+  tls: true
+  servername: d1.awsstatic.com
+  flow: xtls-rprx-vision
+  network: tcp
+  reality-opts:
+    public-key: O5x9mSGdETFh_ql4m_2dPEUNBVwCly9XSi9pu1teLls
+    short-id: 6ba85179e30d4fc2
+  client-fingerprint: chrome
+- name: 🇺🇸 US-vmess | 2-1
   type: vmess
   server: 108.181.2.154
   port: 33445
@@ -85,6 +81,17 @@ proxies:
   alterId: 0
   tls: false
   skip-cert-verify: true
+  network: tcp
+- name: 🇺🇸 US-vmess | 3-1
+  type: vmess
+  server: 108.181.5.18
+  port: 18657
+  cipher: auto
+  uuid: 636ba072-493e-4235-b7a8-822bd4e340d5
+  alterId: 0
+  tls: false
+  skip-cert-verify: true
+  servername: ''
   network: tcp
 - name: 🇨🇳 TW-hysteria | 6-1
   type: hysteria
@@ -187,7 +194,6 @@ proxies:
   server: 62.210.101.0
   port: 52465
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 1-0
@@ -195,7 +201,6 @@ proxies:
   server: 64.110.25.11
   port: 33337
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇫🇷 FR-Hysteria2 | 2-0
@@ -203,7 +208,6 @@ proxies:
   server: 62.210.103.0
   port: 52465
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
 - name: 🇺🇸 US-Hysteria2 | 3-0
@@ -211,9 +215,46 @@ proxies:
   server: 108.181.24.77
   port: 43656
   password: dongtaiwang.com
-  fast-open: true
   sni: www.bing.com
   skip-cert-verify: true
+- name: 🇺🇸 US-vmess | 0-0
+  type: vmess
+  server: 108.181.22.213
+  port: 11223
+  uuid: 28fcdcde-905c-482c-ab31-36a0f5abe931
+  alterId: 0
+  cipher: auto
+  tls: false
+  servername: ''
+  skip-cert-verify: false
+  network: tcp
+  ws-opts:
+    path: ''
+    headers: {}
+  grpc-opts:
+    serviceName: /
+  h2-opts:
+    path: /
+    host: []
+- name: 🇫🇷 FR-vmess | 2-0
+  type: vmess
+  server: 62.210.100.235
+  port: 20138
+  uuid: 3de3fd56-cc9f-42bc-a7e3-608c8990c75f
+  alterId: 0
+  cipher: auto
+  tls: false
+  servername: ''
+  skip-cert-verify: false
+  network: tcp
+  ws-opts:
+    path: ''
+    headers: {}
+  grpc-opts:
+    serviceName: /
+  h2-opts:
+    path: /
+    host: []
 proxy-groups:
 - name: 🚀 节点选择
   type: select
@@ -221,12 +262,11 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -239,18 +279,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: ♻️ 自动选择
   type: url-test
   url: http://www.gstatic.com/generate_204
   interval: 300
   tolerance: 50
   proxies:
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -263,18 +304,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: ⚖ 负载均衡
   type: load-balance
   url: http://www.gstatic.com/generate_204
   interval: 300
   strategy: consistent-hashing
   proxies:
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -287,18 +329,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: ☁ WARP前置节点
   type: select
   proxies:
   - ⚖ 负载均衡
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -311,18 +354,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📺 巴哈姆特
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -335,18 +379,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📺 哔哩哔哩
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -359,18 +404,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🌏 国内媒体
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -383,18 +429,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🌍 国外媒体
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -407,18 +454,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📲 电报信息
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -431,18 +479,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: Ⓜ️ 微软云盘
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -455,18 +504,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: Ⓜ️ 微软服务
   type: select
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -479,18 +529,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🍎 苹果服务
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -503,18 +554,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 📢 谷歌FCM
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -527,18 +579,19 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🤖 OpenAI
   type: select
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -551,6 +604,8 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 - name: 🎯 全球直连
   type: select
   proxies:
@@ -566,12 +621,11 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ☁ WARP
-  - 🇺🇸 US-ss | 0-1
-  - 🇨🇳 CN-ss | 0-2
-  - 🇨🇳 CN-ss | 0-3
-  - 🇨🇦 CA-vmess | 0-4
-  - 🇨🇿 CZ-vmess | 0-5
-  - 🇺🇸 US-vmess | 1-1
+  - 🇫🇷 FR-vless | 0-1
+  - 🇺🇸 US-vless | 0-2
+  - 🇺🇸 US-vless | 0-3
+  - 🇺🇸 US-vmess | 2-1
+  - 🇺🇸 US-vmess | 3-1
   - 🇨🇳 TW-hysteria | 6-1
   - 🇫🇷 FR-hysteria2 | 7-1
   - 🇺🇸 US-hysteria2 | 8-1
@@ -584,6 +638,8 @@ proxy-groups:
   - 🇺🇸 US-Hysteria2 | 1-0
   - 🇫🇷 FR-Hysteria2 | 2-0
   - 🇺🇸 US-Hysteria2 | 3-0
+  - 🇺🇸 US-vmess | 0-0
+  - 🇫🇷 FR-vmess | 2-0
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
 - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
